# codex

./: README.md  flake.nix
.github/workflows/: rust-ci.yml  rust-release.yml
codex-cli/scripts/: install_native_deps.py
codex-rs/: Cargo.toml  README.md
codex-rs/app-server/: Cargo.toml
codex-rs/app-server/src/: bespoke_event_handling.rs  codex_message_processor.rs
codex-rs/chatgpt/: Cargo.toml
codex-rs/chatgpt/src/: chatgpt_token.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: debug_sandbox.rs  lib.rs  login.rs  main.rs
codex-rs/cloud-tasks/src/: lib.rs  util.rs
codex-rs/codex-api/: Cargo.toml
codex-rs/codex-api/src/: lib.rs  provider.rs
codex-rs/codex-api/tests/: clients.rs
codex-rs/core/: Cargo.toml  README.md
codex-rs/core/src/: api_bridge.rs  auth.rs  client.rs  codex.rs  conversation_manager.rs  default_client.rs  error.rs  exec.rs  features.rs  lib.rs  model_provider_info.rs  safety.rs  shell.rs  shell_snapshot.rs  spawn.rs  stream_events_utils.rs  token_data.rs
codex-rs/core/tests/: responses_headers.rs
codex-rs/exec/src/: event_processor_with_human_output.rs
codex-rs/login/: Cargo.toml
codex-rs/login/src/: device_code_auth.rs  server.rs
codex-rs/mcp-server/src/: codex_tool_runner.rs
codex-rs/process-hardening/: README.md
codex-rs/protocol/: Cargo.toml
codex-rs/rmcp-client/: Cargo.toml
codex-rs/tui/: Cargo.toml
codex-rs/tui/src/: app.rs  (+7 more)
codex-rs/tui2/: Cargo.toml
scripts/: install-codex.sh
shell-tool-mcp/src/: bashSelection.ts  constants.ts  platform.ts  types.ts
shell-tool-mcp/tests/: bashSelection.test.ts
(+103 files in other folders)
